# boxer_fork

./: README.md
boxer_base/: CMakeLists.txt  package.xml
boxer_base/cmake/: boxer_baseConfig.cmake
boxer_base/config/: lspcu_required.yaml  tdcu_required.yaml  thermal_limits.yaml
boxer_base/config/cameras/: camera.yaml  left.yaml  left_trigger.yaml  right.yaml  right_trigger.yaml
boxer_base/launch/: base.launch  cameras.launch
boxer_bringup/: CMakeLists.txt  package.xml
boxer_bringup/cmake/: boxer_bringupConfig.cmake
boxer_control/: CMakeLists.txt  boxer_controllers.xml  package.xml
boxer_control/cmake/: boxer_controlConfig.cmake
boxer_control/config/: control.yaml  robot_localization.yaml  teleop.yaml
boxer_control/launch/: control.launch  teleop.launch
boxer_description/: CMakeLists.txt  package.xml
boxer_description/cmake/: boxer_descriptionConfig.cmake
boxer_description/launch/: description.launch
boxer_description/urdf/: boxer.urdf  boxer.urdf.xacro  boxer.xacro
boxer_firmware/: CMakeLists.txt  bootloader.elf  mcu-lspcu  mcu-tdcu  package.xml
boxer_firmware/cmake/: boxer_bootloader-extras.cmake  boxer_firmwareConfig.cmake
boxer_firmware/config/: stm32-discovery.cfg  stm32-p407.cfg
boxer_firmware/launch/: boxer_mcus.launch
boxer_gazebo/: CMakeLists.txt  package.xml
boxer_gazebo/cmake/: boxer_gazeboConfig.cmake
boxer_gazebo/launch/: boxer_world.launch  spawn_boxer.launch
boxer_gazebo/urdf/: boxer.gazebo.xacro
boxer_gazebo_plugins/: CMakeLists.txt  package.xml
boxer_gazebo_plugins/cmake/: boxer_gazebo_pluginsConfig.cmake
boxer_msgs/: CMakeLists.txt  package.xml
boxer_msgs/cmake/: boxer_msgs-msg-extras.cmake  boxer_msgs-msg-paths.cmake  boxer_msgsConfig.cmake
boxer_navigation/: CMakeLists.txt  package.xml
boxer_navigation/cmake/: boxer_navigationConfig.cmake
boxer_simulator/: CMakeLists.txt  package.xml
boxer_visual/: CMakeLists.txt  package.xml
boxer_visual/cmake/: boxer_visualConfig.cmake
boxer_viz/: CMakeLists.txt  package.xml
boxer_viz/cmake/: boxer_vizConfig.cmake
boxer_viz/rviz/: robot.rviz
cpr_common_msgs/: CMakeLists.txt  package.xml
cpr_common_msgs/cmake/: cpr_common_msgs-msg-extras.cmake  cpr_common_msgs-msg-paths.cmake  cpr_common_msgsConfig.cmake
cpr_common_msgs/msg/: Attribute.msg  AutonomyMode.msg  ControlSelectionState.msg  ControlState.msg  GeometryArray.msg  GeometryFeature.msg  LocalizationStatus.msg  MotionState.msg  RobotState.msg  SafetyStatus.msg  SlamMode.msg  Sources.msg  SourcesList.msg  WheelDifferentialCap.msg  WheelDifferentialCapTable.msg
cpr_common_srvs/: CMakeLists.txt  package.xml
cpr_common_srvs/cmake/: cpr_common_srvs-msg-extras.cmake  cpr_common_srvs-msg-paths.cmake  cpr_common_srvsConfig.cmake
cpr_common_srvs/srv/: Int8.srv  SetSingleState.srv
led_array_msgs/: CMakeLists.txt  package.xml
led_array_msgs/cmake/: led_array_msgs-msg-extras.cmake  led_array_msgs-msg-paths.cmake  led_array_msgsConfig.cmake
led_array_msgs/msg/: LedRun.msg  LedState.msg  Status.msg
robot_state_aggregator_client/: CMakeLists.txt  package.xml
robot_state_aggregator_client/cmake/: robot_state_aggregator_clientConfig.cmake
robot_state_aggregator_types/: CMakeLists.txt  package.xml
robot_state_aggregator_types/cmake/: robot_state_aggregator_typesConfig.cmake
visual_indication/: CMakeLists.txt  package.xml
visual_indication/cmake/: visual_indicationConfig.cmake
visual_indication/launch/: visual_indication.launch  visualize_led.launch
