<?xml version="1.0"?>
<package format="2">
  <name>boxer_bringup</name>
  <version>0.0.9</version>
  <description>The boxer_bringup package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>boxer_base</exec_depend>

  <export>
  </export>
</package>
