<?xml version="1.0"?>
<package format="2">
  <name>boxer_gazebo_plugins</name>
  <version>0.0.6</version>
  <description>The boxer_gazebo_plugins package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>cpr_plugin_tools</depend>
  <depend>generic_gpio_plugin</depend>
  <depend>roscpp</depend>
  <depend>boxer_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>roslint</test_depend>

</package>
