<?xml version="1.0"?>
<package format="2">
  <name>boxer_simulator</name>
  <version>0.0.6</version>
  <description>Metapackage encompassing simulation components for BOXER.</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <license>BSD</license>
  <url type="website">http://www.clearpathrobotics.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>boxer_gazebo</exec_depend>
  <exec_depend>boxer_gazebo_plugins</exec_depend>

  <export><metapackage/></export>
</package>
