<?xml version="1.0"?>
<package>
  <name>boxer_visual</name>
  <version>0.0.8</version>
  <description>Data related to BOXER's LED strip</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
