<?xml version="1.0"?>
<package format="2">
  <name>led_array_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages for commanding the OTTO LED array (ring light).
  </description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
</package>
