<?xml version="1.0"?>
<package format="2">
  <name>robot_state_aggregator_client</name>
  <version>0.0.1</version>
  <description>Client library to access the aggregated robot state.</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <author email="lzgrablic@clearpath.ai">Leonard Zgrablic</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <depend>cpr_common_msgs</depend>
  <depend>robot_state_aggregator_types</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
