<?xml version="1.0"?>
<package format="2">
  <name>robot_state_aggregator_types</name>
  <version>0.0.1</version>
  <description>robot_state_aggregator-related types.</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <author email="lzgrablic@clearpath.ai">Leonard Zgrablic</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
