<?xml version="1.0"?>
<package format="2">
  <name>visual_indication</name>

  <version>0.0.1</version>
  <description>Observes system state and commands the LED strip accordingly.</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>angles</depend>
  <depend>cpr_common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>led_array_msgs</depend>
  <depend>libpng-dev</depend>
  <depend>nav_msgs</depend>
  <depend>robot_state_aggregator_client</depend>
  <depend>robot_state_aggregator_types</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

  <test_depend>roslint</test_depend>
  <test_depend>gtest</test_depend>
</package>
